# rust-axum-template

./: .env  Cargo.toml  README.md
src/: app_state.rs  error.rs  main.rs
src/route/: mod.rs
